# SAS_3D

./: .gitignore  CMakeLists.txt  README.md  config.ini
cmake/: FindAssimp.cmake  FindFreeImage.cmake  FindGLEW.cmake  FindGLM.cmake  FindSDL2.cmake
media/: model_registry.json
media/crow/: crow.fbx  emp_advisor_crow_diffuse.dds  emp_advisor_crow_gloss_map.dds  emp_advisor_crow_normal.dds  emp_advisor_crow_specular.dds
media/dragon/: dragon.fbx
media/hagraven/: hagraven_idle.fbx
media/hagraven_copy/: hagraven.dds
media/landscape/: landscape.blend  landscape.blend1  landscape.fbx  terrain.fbx
media/primitives/: sphere.blend  sphere.blend1  sphere.fbx
shaders/: animation.vert  deferred_shading.fs  gbuffer.fs  gbuffer_animated.vs  lighting.frag  model.frag  model.vert  simple.frag  simple.vert  skybox.vert  texture.frag
src/: CMakeLists.txt  bkup  main.cpp
src/assets/: anim_evaluator.cpp  anim_evaluator.h  animation.cpp  animation.h  animator.cpp  animator.h  assimp_loader.cpp  assimp_loader.h  cubemap.cpp  cubemap.h  mesh.cpp  mesh.h  model.cpp  model.h  model_container.cpp  model_container.h  model_loader.cpp  model_loader.h  textures.cpp  textures.h
src/core/: core_config.h  error_codes.cpp  error_codes.h  file_io.cpp  file_io.h  sas_clock.h  sas_input.cpp  sas_input.h  sas_io.cpp  sas_io.h  sas_video.cpp  sas_video.h  utility.cpp  utility.h  uuid.h
src/ecs/: ecs_defines.h
src/ecs/components/: anim_component.h  dynamics_component.h  light_component.h  physical_component.h  render_component.h  static_component.h
src/ecs/framework/: component.h  ecs_manager.cpp  ecs_manager.h  entity_manager.cpp  entity_manager.h  message.h  subject.h  system.cpp  system.h  system_manager.cpp  system_manager.h
src/ecs/systems/: anim_system.cpp  anim_system.h  dynamics_system.cpp  dynamics_system.h  render_system.cpp  render_system.h
src/entities/: camera.cpp  camera.h  player_input.h
src/game_state_machine/: game.cpp  game.h  game_config.cpp  game_config.h  game_running_state.cpp  game_running_state.h  game_state.h  main_menu_state.cpp  main_menu_state.h
src/network/: client.h
src/physics/: rigid_body.cpp
src/render_engine/: render_engine.cpp  render_engine.h  scene_graph.h
src/render_engine/shaders/: shader_program.cpp  shader_program.h
src/render_engine/shaders/input_modules/: animation_module.h  module_defines.h  mvp_module.h  pvm_module.h  texture_module.h
src/shaders/: base_shader.cpp  base_shader.h  shader_program.cpp  shader_program.h  texture_shader.cpp  texture_shader.h
src/subsystems/: clock.cpp  clock.h  subsystem_controller.cpp  subsystem_controller.h
src/subsystems/animation_engine/: anim_container.cpp  anim_container.h  anim_engine.cpp  anim_engine.h  anim_evaluator.cpp  anim_evaluator.h  anim_node.h  anim_state.h  animator.cpp  animator.h
src/subsystems/network/: client.h
src/subsystems/physics/: AABB.cpp  AABB.h  rigid_body.h
src/subsystems/render_engine/: deferred_renderer.cpp  deferred_renderer.h  render_engine.cpp  render_engine.h  sas_shader_api.h  scene.cpp  scene.h
src/subsystems/render_engine/shaders/: shader_program.cpp  shader_program.h
src/subsystems/render_engine/shaders/input_modules/: animation_module.h  input_module.h  light_module.h  module_defines.h  pvm_module.h  texture_module.h
src/utility/: blocking_queue.h  locking_queue.h
third_party_lib/: assimp-vc140-mt.lib
